<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <TextView
            android:id="@+id/idTVPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:text="@string/post_title"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!--image view for our course-->
        <ImageView
            android:id="@+id/idIVPost"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:layout_below="@id/idTVPostTitle"
            android:contentDescription="@string/todo" />

        <!--text view for course name-->

        <TextView
            android:id="@+id/idTVPostDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVPost"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:text="@string/post_description"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>
